deploy: 61e2967e1477dfe96b3a07a4d530ae434283d7e1

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         );
       })();
     </script>
-    <title>Hello oneboot-site! et</title>
+    <title>Hello oneboot-site! et dd</title>
   </head>
   <body>
     <div id="root"></div>
