deploy: ca703d5e9709da22f14e2060f6ce6468f719b6a9

--- a/404.html
+++ b/404.html
@@ -34,6 +34,7 @@
   <body>
     <div id="root"></div>
 
+    <script src="https://hm.baidu.com/hm.js?e1432f90e7faf3c3f390136316bc9827"></script>
     <script src="/umi.js"></script>
   </body>
 </html>
